created login page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
 
+    </head>
+    <body>
+        <div>
+            <div>Name: <input type="text"></input></div>
+            <div>Password: <input type="password"></input></div>
+            <div><button type="button">Submit</button></div>
+        </div>
+    </body>
+</html>
