added border to div

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <div>
+        <div style="border: 1px solid red">
             <div>Name: <input type="text"></input></div>
             <div>Password: <input type="password"></input></div>
             <div><button type="button">Submit</button></div>
