added more tags

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
             <div>Password: <input type="password"></input></div>
             <div><button type="button">Submit</button></div>
         </div>
+
+        <!-- Paragraph tag -->
+        <p>This is a paragraph tag!</p>
+
+        <!-- List -->
+        <ul>
+            <li>List Item One</li>
+            <li>List Item Two</li>
+            <li>List Item Three</li>
+            <li>List Item Four</li>
+        </ul>
+
     </body>
 </html>
